logs/vvveb.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vvv'...
Listing './lib/python3.5/site-packages/vvv/api'...
Compiling './lib/python3.5/site-packages/vvv/api/aug.py'...
***   File "./lib/python3.5/site-packages/vvv/api/aug.py", line 80
    print sp, '=', self.get(sp)
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vvv/plugins'...
Listing './lib/python3.5/site-packages/vvv/plugins/core'...
Compiling './lib/python3.5/site-packages/vvv/plugins/core/commands.py'...
***   File "./lib/python3.5/site-packages/vvv/plugins/core/commands.py", line 107
    print '- %s' % ws['name']
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/vvv/plugins/help'...
Listing './lib/python3.5/site-packages/vvv/plugins/nginx'...
Compiling './lib/python3.5/site-packages/vvv/plugins/nginx/server.py'...
***   File "./lib/python3.5/site-packages/vvv/plugins/nginx/server.py", line 71
    mode=0755
            ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/vvv/plugins/nodejs'...
Listing './lib/python3.5/site-packages/vvv/plugins/phpfpm'...
Listing './lib/python3.5/site-packages/vvv/plugins/plugins'...
Compiling './lib/python3.5/site-packages/vvv/plugins/plugins/commands.py'...
***   File "./lib/python3.5/site-packages/vvv/plugins/plugins/commands.py", line 17
    print plugin.name
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/vvv/plugins/python'...
Listing './lib/python3.5/site-packages/vvv/plugins/supervisor'...
Listing './lib/python3.5/site-packages/vvveb-1.0.31.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
